# gstreamer-rtsp-proxy-server

./: CMakeLists.txt  README.md  index.md
config/: rtsp-proxy.yaml
include/: OpenCvReader.hpp  RtspClient.hpp  RtspMedia.hpp  RtspProxyConfig.hpp  RtspProxyProcessor.hpp  RtspServer.hpp
scripts/: build.sh
src/: OpenCvReader.cpp  RtspClient.cpp  RtspMedia.cpp  RtspProxyConfig.cpp  RtspProxyProcessor.cpp  RtspServer.cpp  rtsp-proxy-server.cpp
